include/rafx.h

typedef struct RfxBufferImpl* RfxBuffer;
typedef struct RfxTextureImpl* RfxTexture;
typedef struct RfxShaderImpl* RfxShader;
typedef struct RfxPipelineImpl* RfxPipeline;
typedef struct RfxCommandListImpl* RfxCommandList;
typedef struct RfxDenoiserImpl* RfxDenoiser;
typedef struct RfxAccelerationStructureImpl* RfxAccelerationStructure;
typedef struct RfxShaderBindingTableImpl* RfxShaderBindingTable;
typedef struct RfxMicromapImpl* RfxMicromap;
typedef struct RfxUpscalerImpl* RfxUpscaler;
typedef struct RfxQueryPoolImpl* RfxQueryPool;
typedef enum {
    RFX_FILTER_NEAREST,
    RFX_FILTER_LINEAR,
} RfxFilter;
typedef enum {
    RFX_WRAP_REPEAT,
    RFX_WRAP_CLAMP,
    RFX_WRAP_MIRROR,
} RfxAddressMode;
typedef enum {
    RFX_TOPOLOGY_TRIANGLE_LIST,
    RFX_TOPOLOGY_TRIANGLE_STRIP,
    RFX_TOPOLOGY_POINT_LIST,
    RFX_TOPOLOGY_LINE_LIST,
    RFX_TOPOLOGY_LINE_STRIP,
    RFX_TOPOLOGY_LINE_LIST_WITH_ADJACENCY,
    RFX_TOPOLOGY_LINE_STRIP_WITH_ADJACENCY,
    RFX_TOPOLOGY_TRIANGLE_LIST_WITH_ADJACENCY,
    RFX_TOPOLOGY_TRIANGLE_STRIP_WITH_ADJACENCY,
    RFX_TOPOLOGY_PATCH_LIST
} RfxTopology;
typedef enum {
    RFX_STATE_UNDEFINED,
    RFX_STATE_PRESENT,
    RFX_STATE_COPY_SRC,
    RFX_STATE_COPY_DST,
    RFX_STATE_VERTEX_BUFFER,
    RFX_STATE_INDEX_BUFFER,
    RFX_STATE_INDIRECT_ARGUMENT,
    RFX_STATE_SHADER_READ,  // SRV (texture or buffer)
    RFX_STATE_SHADER_WRITE, // UAV (storage)
    RFX_STATE_RENDER_TARGET,
    RFX_STATE_DEPTH_READ,
    RFX_STATE_DEPTH_WRITE,
    RFX_STATE_SCRATCH_BUFFER, // AS scratch buffer
    RFX_STATE_RESOLVE_SRC,
    RFX_STATE_RESOLVE_DST,
} RfxResourceState;
typedef enum {
    RFX_MEM_GPU_ONLY,
    RFX_MEM_CPU_TO_GPU, // Upload heap
    RFX_MEM_GPU_TO_CPU, // Readback heap
} RfxMemoryType;
typedef enum {
    RFX_FORMAT_UNKNOWN,
    RFX_FORMAT_RGBA8_UNORM,
    RFX_FORMAT_RGBA8_SRGB,
    RFX_FORMAT_BGRA8_UNORM,
    RFX_FORMAT_BGRA8_SRGB,
    // Integers
    RFX_FORMAT_R8_UINT,
    RFX_FORMAT_R8_SINT,
    RFX_FORMAT_RG8_UINT,
    RFX_FORMAT_RG8_SINT,
    RFX_FORMAT_RGBA8_UINT,
    RFX_FORMAT_RGBA8_SINT,
    RFX_FORMAT_R16_UINT,
    RFX_FORMAT_R16_SINT,
    RFX_FORMAT_R16_UNORM,
    RFX_FORMAT_R16_SNORM,
    RFX_FORMAT_RG16_UINT,
    RFX_FORMAT_RG16_SINT,
    RFX_FORMAT_RG16_UNORM,
    RFX_FORMAT_RG16_SNORM,
    RFX_FORMAT_RGBA16_UINT,
    RFX_FORMAT_RGBA16_SINT,
    RFX_FORMAT_RGBA16_UNORM,
    RFX_FORMAT_RGBA16_SNORM,
    RFX_FORMAT_R32_UINT,
    RFX_FORMAT_R32_SINT,
    RFX_FORMAT_RG32_UINT,
    RFX_FORMAT_RG32_SINT,
    RFX_FORMAT_RGB32_UINT,
    RFX_FORMAT_RGB32_SINT,
    RFX_FORMAT_RGBA32_UINT,
    RFX_FORMAT_RGBA32_SINT,
    // Packed
    RFX_FORMAT_R10_G10_B10_A2_UNORM,
    RFX_FORMAT_R10_G10_B10_A2_UINT,
    RFX_FORMAT_R11_G11_B10_UFLOAT,
    RFX_FORMAT_R9_G9_B9_E5_UFLOAT,
    // BCn compressed
    RFX_FORMAT_BC1_RGBA_UNORM,
    RFX_FORMAT_BC1_RGBA_SRGB,
    RFX_FORMAT_BC2_RGBA_UNORM,
    RFX_FORMAT_BC2_RGBA_SRGB,
    RFX_FORMAT_BC3_RGBA_UNORM,
    RFX_FORMAT_BC3_RGBA_SRGB,
    RFX_FORMAT_BC4_R_UNORM,
    RFX_FORMAT_BC4_R_SNORM,
    RFX_FORMAT_BC5_RG_UNORM,
    RFX_FORMAT_BC5_RG_SNORM,
    RFX_FORMAT_BC6H_RGB_UFLOAT,
    RFX_FORMAT_BC6H_RGB_SFLOAT,
    RFX_FORMAT_BC7_RGBA_UNORM,
    RFX_FORMAT_BC7_RGBA_SRGB,
    // Depth/Stencil
    RFX_FORMAT_D16_UNORM,
    RFX_FORMAT_D24_UNORM_S8_UINT,
    RFX_FORMAT_D32_FLOAT,
    RFX_FORMAT_D32_FLOAT_S8_UINT_X24,
    // Floats
    RFX_FORMAT_R32_FLOAT,
    RFX_FORMAT_RG32_FLOAT,
    RFX_FORMAT_RGB32_FLOAT,
    RFX_FORMAT_RGBA32_FLOAT,
    RFX_FORMAT_RGBA16_FLOAT,
} RfxFormat;
typedef enum {
    RFX_BLEND_FACTOR_ZERO,
    RFX_BLEND_FACTOR_ONE,
    RFX_BLEND_FACTOR_SRC_COLOR,
    RFX_BLEND_FACTOR_ONE_MINUS_SRC_COLOR,
    RFX_BLEND_FACTOR_DST_COLOR,
    RFX_BLEND_FACTOR_ONE_MINUS_DST_COLOR,
    RFX_BLEND_FACTOR_SRC_ALPHA,
    RFX_BLEND_FACTOR_ONE_MINUS_SRC_ALPHA,
    RFX_BLEND_FACTOR_DST_ALPHA,
    RFX_BLEND_FACTOR_ONE_MINUS_DST_ALPHA,
    RFX_BLEND_FACTOR_CONSTANT_COLOR,
    RFX_BLEND_FACTOR_ONE_MINUS_CONSTANT_COLOR,
    RFX_BLEND_FACTOR_CONSTANT_ALPHA,
    RFX_BLEND_FACTOR_ONE_MINUS_CONSTANT_ALPHA,
    RFX_BLEND_FACTOR_SRC_ALPHA_SATURATE,
    RFX_BLEND_FACTOR_SRC1_COLOR,
    RFX_BLEND_FACTOR_ONE_MINUS_SRC1_COLOR,
    RFX_BLEND_FACTOR_SRC1_ALPHA,
    RFX_BLEND_FACTOR_ONE_MINUS_SRC1_ALPHA
} RfxBlendFactor;
typedef enum {
    RFX_BLEND_OP_ADD,
    RFX_BLEND_OP_SUBTRACT,
    RFX_BLEND_OP_REVERSE_SUBTRACT,
    RFX_BLEND_OP_MIN,
    RFX_BLEND_OP_MAX,
} RfxBlendOp;
typedef enum {
    RFX_DENOISER_REBLUR_DIFFUSE,
    RFX_DENOISER_REBLUR_DIFFUSE_SPECULAR,
    RFX_DENOISER_RELAX_DIFFUSE,
    RFX_DENOISER_RELAX_DIFFUSE_SPECULAR,
    RFX_DENOISER_SIGMA_SHADOW,
} RfxDenoiserType;
typedef struct {
    float viewToClip[16];
    float viewToClipPrev[16];
    float worldToView[16];
    float worldToViewPrev[16];

    float denoisingRange;        // Distance where denoising stops (e.g., 100.0)
    float viewZScale;            // Scale for ViewZ (usually 1.0)
    float disocclusionThreshold; // Sensitivity to motion (default 0.01)
    bool enableValidation;       // Enable validation texture

    float motionVectorScale[2]; // {1.0f, 1.0f} for UV space
    bool isMotionVectorInWorldSpace;
    float jitter[2];
    float jitterPrev[2];
    uint32_t frameIndex;
    bool resetHistory;
} RfxDenoiserSettings;
typedef enum {
    RFX_AS_TOP_LEVEL,
    RFX_AS_BOTTOM_LEVEL,
} RfxAccelerationStructureType;
typedef struct {
    bool isAABB; // false = Triangles, true = AABBs
    bool opaque;
    union {
        RfxGeometryTriangles triangles;
        RfxGeometryAABBs aabbs;
    };
} RfxGeometryDesc;
typedef struct {
    RfxAccelerationStructureType type;
    RfxBuildASFlags flags;
    uint32_t count;                    // For BLAS: number of geometries; for TLAS: max instance count
    const RfxGeometryDesc* geometries; // BLAS only
} RfxAccelerationStructureDesc;
// Single TLAS instance
typedef struct {
    float transform[3][4]; // Row-major 3x4 matrix
    uint32_t instanceId : 24;
    uint32_t mask : 8;
    uint32_t instanceContributionToHitGroupIndex : 24;
    RfxInstanceFlags flags : 8;
    RfxAccelerationStructure blas;
} RfxInstance;
typedef struct {
    RfxShaderGroupType type;
    const char* generalShader;      // RayGen, Miss, Callable entrypoint name
    const char* closestHitShader;   // HitGroup entrypoint name
    const char* anyHitShader;       // HitGroup entrypoint name
    const char* intersectionShader; // HitGroup entrypoint name
} RfxShaderGroup;
typedef struct {
    RfxShader shader;
    const RfxShaderGroup* groups;
    uint32_t groupCount;
    uint32_t maxRecursionDepth;
    uint32_t maxPayloadSize;
    uint32_t maxAttributeSize;
    RfxRayTracingPipelineFlags flags;
} RfxRayTracingPipelineDesc;
typedef struct {
    RfxShaderBindingTable sbt;
    uint32_t rayGenIndex;
    uint32_t missIndex;
    uint32_t missCount;
    uint32_t hitIndex;
    uint32_t hitCount;
    uint32_t callableIndex;
    uint32_t callableCount;
} RfxTraceRaysDesc;
typedef struct {
    uint32_t count; // Number of triangles using this format/level
    uint16_t subdivisionLevel;
    RfxMicromapFormat format;
} RfxMicromapUsage;
typedef struct {
    const RfxMicromapUsage* usages;
    uint32_t usageCount;
    RfxBuildMicromapFlags flags;
} RfxMicromapDesc;
typedef struct {
    RfxMicromap dst;
    RfxBuffer data;
    uint64_t dataOffset;
    RfxBuffer triangleIndices; // RfxMicromapTriangle[]
    uint64_t triangleIndicesOffset;
    RfxBuffer scratch;
    uint64_t scratchOffset;
} RfxBuildMicromapDesc;
typedef enum {
    RFX_UPSCALER_NIS,  // NVIDIA Image Scaling
    RFX_UPSCALER_FSR,  // AMD FSR
    RFX_UPSCALER_XESS, // Intel XeSS
    RFX_UPSCALER_DLSR, // NVIDIA DLSS
    RFX_UPSCALER_DLRR  // NVIDIA Ray Reconstruction
} RfxUpscalerType;
typedef enum {
    RFX_UPSCALER_MODE_NATIVE,            // 1.0x
    RFX_UPSCALER_MODE_ULTRA_QUALITY,     // 1.3x
    RFX_UPSCALER_MODE_QUALITY,           // 1.5x
    RFX_UPSCALER_MODE_BALANCED,          // 1.7x
    RFX_UPSCALER_MODE_PERFORMANCE,       // 2.0x
    RFX_UPSCALER_MODE_ULTRA_PERFORMANCE, // 3.0x
} RfxUpscalerMode;
typedef struct {
    RfxUpscalerType type;
    RfxUpscalerMode mode;
    RfxUpscalerFlags flags;
    uint32_t outputWidth;
    uint32_t outputHeight;
    uint8_t preset; // 0 = default
} RfxUpscalerDesc;
typedef struct {
    float scalingFactor;
    float mipBias;
    uint32_t renderWidth;
    uint32_t renderHeight;
    uint32_t outputWidth;
    uint32_t outputHeight;
    uint8_t jitterPhaseCount;
} RfxUpscalerProps;
typedef struct {
    // Resources
    RfxTexture input;  // SRV (required)
    RfxTexture output; // UAV (required)

    // Common guides
    RfxTexture depth;         // SRV
    RfxTexture motionVectors; // SRV
    RfxTexture exposure;      // SRV (optional)
    RfxTexture reactive;      // SRV (optional)

    // DLRR guides (ignored for others)
    RfxTexture normalRoughness;
    RfxTexture diffuseAlbedo;
    RfxTexture specularAlbedo;
    RfxTexture specularMvOrHitT;
    RfxTexture sss; // Subsurface scattering (optional)

    // Common settings
    float sharpness; // [0..1]
    float jitter[2];
    float motionVectorScale[2];
    RfxUpscaleDispatchFlags dispatchFlags;

    // FSR/DLRR settings
    float zNear;
    float zFar;
    float verticalFov;             // Radians
    float viewSpaceToMetersFactor; // FSR only (defaults to 1.0)

    // Row-major 4x4 matrices {Xx, Yx, Zx, 0, ... Tx, Ty, Tz, 1}
    float viewToClip[16];  // Required for FSR, DLRR
    float worldToView[16]; // Required for DLRR
} RfxUpscaleDesc;
//
// ImGui Extension
//

typedef struct {
    void* const* drawLists;
    uint32_t drawListCount;
    void* const* textures;
    uint32_t textureCount;
    float displayWidth;
    float displayHeight;
    float hdrScale;
    bool linearColor;
} RfxImGuiDrawData;
RAFX_API bool rfxInitImGui();
RAFX_API void rfxShutdownImGui();
RAFX_API void rfxCmdDrawImGui(RfxCommandList cmd, const RfxImGuiDrawData* data);
//
// Denoiser (NRD) Extension
//

RAFX_API RfxDenoiser rfxCreateDenoiser(RfxDenoiserType type, int width, int height);
RAFX_API void rfxDestroyDenoiser(RfxDenoiser denoiser);
// `resources` must be an array of size `RFX_DENOISER_RESOURCE_COUNT`, sparsely populated with NULL where unused.
// `resourceCount` should be `RFX_DENOISER_RESOURCE_COUNT`.
RAFX_API void
rfxCmdDenoise(RfxCommandList cmd, RfxDenoiser denoiser, const RfxDenoiserSettings* settings, RfxTexture* resources, uint32_t resourceCount);
//
// Raytracing extension
//

RAFX_API RfxAccelerationStructure rfxCreateAccelerationStructure(const RfxAccelerationStructureDesc* desc);
RAFX_API void rfxDestroyAccelerationStructure(RfxAccelerationStructure as);
RAFX_API uint32_t rfxGetAccelerationStructureId(RfxAccelerationStructure as);
RAFX_API uint64_t rfxGetAccelerationStructureScratchSize(RfxAccelerationStructure as);
RAFX_API void rfxCmdWriteAccelerationStructureSize(
    RfxCommandList cmd, RfxAccelerationStructure* asArray, uint32_t count, RfxQueryPool pool, uint32_t queryOffset
);
RAFX_API RfxPipeline rfxCreateRayTracingPipeline(const RfxRayTracingPipelineDesc* desc);
RAFX_API RfxShaderBindingTable rfxCreateShaderBindingTable(RfxPipeline pipeline);
RAFX_API void rfxDestroyShaderBindingTable(RfxShaderBindingTable sbt);
// Builds BLAS or TLAS. For TLAS, `instanceBuffer` must be populated via `rfxCmdUploadInstances`
RAFX_API void
rfxCmdBuildAccelerationStructure(RfxCommandList cmd, RfxAccelerationStructure dst, RfxBuffer scratch, RfxBuffer instanceBuffer);
RAFX_API void rfxCmdUploadInstances(RfxCommandList cmd, RfxBuffer dstBuffer, const RfxInstance* instances, uint32_t instanceCount);
RAFX_API void rfxCmdTraceRays(RfxCommandList cmd, const RfxTraceRaysDesc* desc, uint32_t width, uint32_t height, uint32_t depth);
RAFX_API void rfxCmdDispatchRaysIndirect(RfxCommandList cmd, RfxBuffer argsBuffer, uint64_t argsOffset);
RAFX_API RfxMicromap rfxCreateMicromap(const RfxMicromapDesc* desc);
RAFX_API void rfxDestroyMicromap(RfxMicromap micromap);
RAFX_API uint64_t rfxGetMicromapScratchSize(RfxMicromap micromap);
RAFX_API void rfxCmdBuildMicromaps(RfxCommandList cmd, const RfxBuildMicromapDesc* desc);
//
// Upscaling extension
//

RAFX_API bool rfxIsUpscalerSupported(RfxUpscalerType type);
RAFX_API RfxUpscaler rfxCreateUpscaler(const RfxUpscalerDesc* desc);
RAFX_API void rfxDestroyUpscaler(RfxUpscaler upscaler);
RAFX_API void rfxGetUpscalerProps(RfxUpscaler upscaler, RfxUpscalerProps* outProps);
RAFX_API void rfxCmdUpscale(RfxCommandList cmd, RfxUpscaler upscaler, const RfxUpscaleDesc* desc);