bindings/rafx-rs/src/lib.rs

        pub fn rfxInitImGui() -> bool;
        pub fn rfxShutdownImGui();
        pub fn rfxCmdDrawImGui(cmd: RfxCommandList, data: *const RfxImGuiDrawData);
        pub fn rfxCreateDenoiser(r#type: RfxDenoiserType, width: i32, height: i32) -> RfxDenoiser;
        pub fn rfxDestroyDenoiser(denoiser: RfxDenoiser);
        pub fn rfxCmdDenoise(
            cmd: RfxCommandList,
            denoiser: RfxDenoiser,
            settings: *const RfxDenoiserSettings,
            resources: *mut RfxTexture,
            resourceCount: u32,
        );
        pub fn rfxCreateAccelerationStructure(
            desc: *const RfxAccelerationStructureDesc,
        ) -> RfxAccelerationStructure;
        pub fn rfxDestroyAccelerationStructure(r#as: RfxAccelerationStructure);
        pub fn rfxGetAccelerationStructureId(r#as: RfxAccelerationStructure) -> u32;
        pub fn rfxGetAccelerationStructureScratchSize(r#as: RfxAccelerationStructure) -> u64;
        pub fn rfxCmdWriteAccelerationStructureSize(
            cmd: RfxCommandList,
            asArray: *mut RfxAccelerationStructure,
            count: u32,
            pool: RfxQueryPool,
            queryOffset: u32,
        );
        pub fn rfxCreateRayTracingPipeline(desc: *const RfxRayTracingPipelineDesc) -> RfxPipeline;
        pub fn rfxCreateShaderBindingTable(pipeline: RfxPipeline) -> RfxShaderBindingTable;
        pub fn rfxDestroyShaderBindingTable(sbt: RfxShaderBindingTable);
        pub fn rfxCmdBuildAccelerationStructure(
            cmd: RfxCommandList,
            dst: RfxAccelerationStructure,
            scratch: RfxBuffer,
            instanceBuffer: RfxBuffer,
        );
        pub fn rfxCmdUploadInstances(
            cmd: RfxCommandList,
            dstBuffer: RfxBuffer,
            instances: *const RfxInstance,
            instanceCount: u32,
        );
        pub fn rfxCmdTraceRays(
            cmd: RfxCommandList,
            desc: *const RfxTraceRaysDesc,
            width: u32,
            height: u32,
            depth: u32,
        );
        pub fn rfxCmdDispatchRaysIndirect(
            cmd: RfxCommandList,
            argsBuffer: RfxBuffer,
            argsOffset: u64,
        );
        pub fn rfxCreateMicromap(desc: *const RfxMicromapDesc) -> RfxMicromap;
        pub fn rfxDestroyMicromap(micromap: RfxMicromap);
        pub fn rfxGetMicromapScratchSize(micromap: RfxMicromap) -> u64;
        pub fn rfxCmdBuildMicromaps(cmd: RfxCommandList, desc: *const RfxBuildMicromapDesc);
        pub fn rfxIsUpscalerSupported(r#type: RfxUpscalerType) -> bool;
        pub fn rfxCreateUpscaler(desc: *const RfxUpscalerDesc) -> RfxUpscaler;
        pub fn rfxDestroyUpscaler(upscaler: RfxUpscaler);
        pub fn rfxGetUpscalerProps(upscaler: RfxUpscaler, outProps: *mut RfxUpscalerProps);
        pub fn rfxCmdUpscale(
            cmd: RfxCommandList,
            upscaler: RfxUpscaler,
            desc: *const RfxUpscaleDesc,
        );
    }
}

//
// Typedefs
//
pub type __vcrt_bool = sys::__vcrt_bool;
pub type int_least8_t = sys::int_least8_t;
pub type int_least16_t = sys::int_least16_t;
pub type int_least32_t = sys::int_least32_t;
pub type int_least64_t = sys::int_least64_t;
pub type uint_least8_t = sys::uint_least8_t;
pub type uint_least16_t = sys::uint_least16_t;
pub type uint_least32_t = sys::uint_least32_t;
pub type uint_least64_t = sys::uint_least64_t;
pub type int_fast8_t = sys::int_fast8_t;
pub type int_fast16_t = sys::int_fast16_t;
pub type int_fast32_t = sys::int_fast32_t;
pub type int_fast64_t = sys::int_fast64_t;
pub type uint_fast8_t = sys::uint_fast8_t;
pub type uint_fast16_t = sys::uint_fast16_t;
pub type uint_fast32_t = sys::uint_fast32_t;
pub type uint_fast64_t = sys::uint_fast64_t;
pub type intmax_t = sys::intmax_t;
pub type uintmax_t = sys::uintmax_t;

//
// Enums
//
#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum Filter {
    Nearest = sys::RFX_FILTER_NEAREST as u32,
    Linear = sys::RFX_FILTER_LINEAR as u32,
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum AddressMode {
    Repeat = sys::RFX_WRAP_REPEAT as u32,
    Clamp = sys::RFX_WRAP_CLAMP as u32,
    Mirror = sys::RFX_WRAP_MIRROR as u32,
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum Topology {
    TriangleList = sys::RFX_TOPOLOGY_TRIANGLE_LIST as u32,
    TriangleStrip = sys::RFX_TOPOLOGY_TRIANGLE_STRIP as u32,
    PointList = sys::RFX_TOPOLOGY_POINT_LIST as u32,
    LineList = sys::RFX_TOPOLOGY_LINE_LIST as u32,
    LineStrip = sys::RFX_TOPOLOGY_LINE_STRIP as u32,
    LineListWithAdjacency = sys::RFX_TOPOLOGY_LINE_LIST_WITH_ADJACENCY as u32,
    LineStripWithAdjacency = sys::RFX_TOPOLOGY_LINE_STRIP_WITH_ADJACENCY as u32,
    TriangleListWithAdjacency = sys::RFX_TOPOLOGY_TRIANGLE_LIST_WITH_ADJACENCY as u32,
    TriangleStripWithAdjacency = sys::RFX_TOPOLOGY_TRIANGLE_STRIP_WITH_ADJACENCY as u32,
    PatchList = sys::RFX_TOPOLOGY_PATCH_LIST as u32,
}

bitflags::bitflags! {
        #[derive(Debug, Clone, Copy, PartialEq, Eq, PartialOrd, Ord, Hash)]
    pub struct BufferUsageFlags: u32 {
        const SHADER_RESOURCE = sys::RFX_USAGE_SHADER_RESOURCE;
        const SHADER_RESOURCE_STORAGE = sys::RFX_USAGE_SHADER_RESOURCE_STORAGE;
        const VERTEX_BUFFER = sys::RFX_USAGE_VERTEX_BUFFER;
        const INDEX_BUFFER = sys::RFX_USAGE_INDEX_BUFFER;
        const CONSTANT_BUFFER = sys::RFX_USAGE_CONSTANT_BUFFER;
        const ARGUMENT_BUFFER = sys::RFX_USAGE_ARGUMENT_BUFFER;
        const SCRATCH_BUFFER = sys::RFX_USAGE_SCRATCH_BUFFER;
        const SHADER_BINDING_TABLE = sys::RFX_USAGE_SHADER_BINDING_TABLE;
        const ACCELERATION_STRUCTURE_BUILD_INPUT = sys::RFX_USAGE_ACCELERATION_STRUCTURE_BUILD_INPUT;
        const MICROMAP_BUILD_INPUT = sys::RFX_USAGE_MICROMAP_BUILD_INPUT;
        const TRANSFER_SRC = sys::RFX_USAGE_TRANSFER_SRC;
        const TRANSFER_DST = sys::RFX_USAGE_TRANSFER_DST;
    }
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum ResourceState {
    Undefined = sys::RFX_STATE_UNDEFINED as u32,
    Present = sys::RFX_STATE_PRESENT as u32,
    CopySrc = sys::RFX_STATE_COPY_SRC as u32,
    CopyDst = sys::RFX_STATE_COPY_DST as u32,
    VertexBuffer = sys::RFX_STATE_VERTEX_BUFFER as u32,
    IndexBuffer = sys::RFX_STATE_INDEX_BUFFER as u32,
    IndirectArgument = sys::RFX_STATE_INDIRECT_ARGUMENT as u32,
    ShaderRead = sys::RFX_STATE_SHADER_READ as u32,
    ShaderWrite = sys::RFX_STATE_SHADER_WRITE as u32,
    RenderTarget = sys::RFX_STATE_RENDER_TARGET as u32,
    DepthRead = sys::RFX_STATE_DEPTH_READ as u32,
    DepthWrite = sys::RFX_STATE_DEPTH_WRITE as u32,
    ScratchBuffer = sys::RFX_STATE_SCRATCH_BUFFER as u32,
    ResolveSrc = sys::RFX_STATE_RESOLVE_SRC as u32,
    ResolveDst = sys::RFX_STATE_RESOLVE_DST as u32,
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum MemoryType {
    GpuOnly = sys::RFX_MEM_GPU_ONLY as u32,
    CpuToGpu = sys::RFX_MEM_CPU_TO_GPU as u32,
    GpuToCpu = sys::RFX_MEM_GPU_TO_CPU as u32,
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum Format {
    Unknown = sys::RFX_FORMAT_UNKNOWN as u32,
    Rgba8Unorm = sys::RFX_FORMAT_RGBA8_UNORM as u32,
    Rgba8Srgb = sys::RFX_FORMAT_RGBA8_SRGB as u32,
    Bgra8Unorm = sys::RFX_FORMAT_BGRA8_UNORM as u32,
    Bgra8Srgb = sys::RFX_FORMAT_BGRA8_SRGB as u32,
    R8Uint = sys::RFX_FORMAT_R8_UINT as u32,
    R8Sint = sys::RFX_FORMAT_R8_SINT as u32,
    Rg8Uint = sys::RFX_FORMAT_RG8_UINT as u32,
    Rg8Sint = sys::RFX_FORMAT_RG8_SINT as u32,
    Rgba8Uint = sys::RFX_FORMAT_RGBA8_UINT as u32,
    Rgba8Sint = sys::RFX_FORMAT_RGBA8_SINT as u32,
    R16Uint = sys::RFX_FORMAT_R16_UINT as u32,
    R16Sint = sys::RFX_FORMAT_R16_SINT as u32,
    R16Unorm = sys::RFX_FORMAT_R16_UNORM as u32,
    R16Snorm = sys::RFX_FORMAT_R16_SNORM as u32,
    Rg16Uint = sys::RFX_FORMAT_RG16_UINT as u32,
    Rg16Sint = sys::RFX_FORMAT_RG16_SINT as u32,
    Rg16Unorm = sys::RFX_FORMAT_RG16_UNORM as u32,
    Rg16Snorm = sys::RFX_FORMAT_RG16_SNORM as u32,
    Rgba16Uint = sys::RFX_FORMAT_RGBA16_UINT as u32,
    Rgba16Sint = sys::RFX_FORMAT_RGBA16_SINT as u32,
    Rgba16Unorm = sys::RFX_FORMAT_RGBA16_UNORM as u32,
    Rgba16Snorm = sys::RFX_FORMAT_RGBA16_SNORM as u32,
    R32Uint = sys::RFX_FORMAT_R32_UINT as u32,
    R32Sint = sys::RFX_FORMAT_R32_SINT as u32,
    Rg32Uint = sys::RFX_FORMAT_RG32_UINT as u32,
    Rg32Sint = sys::RFX_FORMAT_RG32_SINT as u32,
    Rgb32Uint = sys::RFX_FORMAT_RGB32_UINT as u32,
    Rgb32Sint = sys::RFX_FORMAT_RGB32_SINT as u32,
    Rgba32Uint = sys::RFX_FORMAT_RGBA32_UINT as u32,
    Rgba32Sint = sys::RFX_FORMAT_RGBA32_SINT as u32,
    R10G10B10A2Unorm = sys::RFX_FORMAT_R10_G10_B10_A2_UNORM as u32,
    R10G10B10A2Uint = sys::RFX_FORMAT_R10_G10_B10_A2_UINT as u32,
    R11G11B10Ufloat = sys::RFX_FORMAT_R11_G11_B10_UFLOAT as u32,
    R9G9B9E5Ufloat = sys::RFX_FORMAT_R9_G9_B9_E5_UFLOAT as u32,
    Bc1RgbaUnorm = sys::RFX_FORMAT_BC1_RGBA_UNORM as u32,
    Bc1RgbaSrgb = sys::RFX_FORMAT_BC1_RGBA_SRGB as u32,
    Bc2RgbaUnorm = sys::RFX_FORMAT_BC2_RGBA_UNORM as u32,
    Bc2RgbaSrgb = sys::RFX_FORMAT_BC2_RGBA_SRGB as u32,
    Bc3RgbaUnorm = sys::RFX_FORMAT_BC3_RGBA_UNORM as u32,
    Bc3RgbaSrgb = sys::RFX_FORMAT_BC3_RGBA_SRGB as u32,
    Bc4RUnorm = sys::RFX_FORMAT_BC4_R_UNORM as u32,
    Bc4RSnorm = sys::RFX_FORMAT_BC4_R_SNORM as u32,
    Bc5RgUnorm = sys::RFX_FORMAT_BC5_RG_UNORM as u32,
    Bc5RgSnorm = sys::RFX_FORMAT_BC5_RG_SNORM as u32,
    Bc6HRgbUfloat = sys::RFX_FORMAT_BC6H_RGB_UFLOAT as u32,
    Bc6HRgbSfloat = sys::RFX_FORMAT_BC6H_RGB_SFLOAT as u32,
    Bc7RgbaUnorm = sys::RFX_FORMAT_BC7_RGBA_UNORM as u32,
    Bc7RgbaSrgb = sys::RFX_FORMAT_BC7_RGBA_SRGB as u32,
    D16Unorm = sys::RFX_FORMAT_D16_UNORM as u32,
    D24UnormS8Uint = sys::RFX_FORMAT_D24_UNORM_S8_UINT as u32,
    D32Float = sys::RFX_FORMAT_D32_FLOAT as u32,
    D32FloatS8UintX24 = sys::RFX_FORMAT_D32_FLOAT_S8_UINT_X24 as u32,
    R32Float = sys::RFX_FORMAT_R32_FLOAT as u32,
    Rg32Float = sys::RFX_FORMAT_RG32_FLOAT as u32,
    Rgb32Float = sys::RFX_FORMAT_RGB32_FLOAT as u32,
    Rgba32Float = sys::RFX_FORMAT_RGBA32_FLOAT as u32,
    Rgba16Float = sys::RFX_FORMAT_RGBA16_FLOAT as u32,
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum BlendFactor {
    Zero = sys::RFX_BLEND_FACTOR_ZERO as u32,
    One = sys::RFX_BLEND_FACTOR_ONE as u32,
    SrcColor = sys::RFX_BLEND_FACTOR_SRC_COLOR as u32,
    OneMinusSrcColor = sys::RFX_BLEND_FACTOR_ONE_MINUS_SRC_COLOR as u32,
    DstColor = sys::RFX_BLEND_FACTOR_DST_COLOR as u32,
    OneMinusDstColor = sys::RFX_BLEND_FACTOR_ONE_MINUS_DST_COLOR as u32,
    SrcAlpha = sys::RFX_BLEND_FACTOR_SRC_ALPHA as u32,
    OneMinusSrcAlpha = sys::RFX_BLEND_FACTOR_ONE_MINUS_SRC_ALPHA as u32,
    DstAlpha = sys::RFX_BLEND_FACTOR_DST_ALPHA as u32,
    OneMinusDstAlpha = sys::RFX_BLEND_FACTOR_ONE_MINUS_DST_ALPHA as u32,
    ConstantColor = sys::RFX_BLEND_FACTOR_CONSTANT_COLOR as u32,
    OneMinusConstantColor = sys::RFX_BLEND_FACTOR_ONE_MINUS_CONSTANT_COLOR as u32,
    ConstantAlpha = sys::RFX_BLEND_FACTOR_CONSTANT_ALPHA as u32,
    OneMinusConstantAlpha = sys::RFX_BLEND_FACTOR_ONE_MINUS_CONSTANT_ALPHA as u32,
    SrcAlphaSaturate = sys::RFX_BLEND_FACTOR_SRC_ALPHA_SATURATE as u32,
    Src1Color = sys::RFX_BLEND_FACTOR_SRC1_COLOR as u32,
    OneMinusSrc1Color = sys::RFX_BLEND_FACTOR_ONE_MINUS_SRC1_COLOR as u32,
    Src1Alpha = sys::RFX_BLEND_FACTOR_SRC1_ALPHA as u32,
    OneMinusSrc1Alpha = sys::RFX_BLEND_FACTOR_ONE_MINUS_SRC1_ALPHA as u32,
}

#[repr(u32)]
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum BlendOp {
    Add = sys::RFX_BLEND_OP_ADD as u32,
    Subtract = sys::RFX_BLEND_OP_SUBTRACT as u32,
    ReverseSubtract = sys::RFX_BLEND_OP_REVERSE_SUBTRACT as u32,
    Min = sys::RFX_BLEND_OP_MIN as u32,
    Max = sys::RFX_BLEND_OP_MAX as u32,
}
